Bug 100132 - [SKL][BAT] kms_pipe_crc_basic@nonblocking-crc-pipe-b/c fails on CI
Summary: [SKL][BAT] kms_pipe_crc_basic@nonblocking-crc-pipe-b/c fails on CI
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-08 20:56 UTC by Jani Saarinen
Modified: 2017-03-14 07:39 UTC (History)
2 users (show)

See Also:
i915 platform: SKL
i915 features:


Attachments

Description Jani Saarinen 2017-03-08 20:56:15 UTC
On CI kms_pipe_crc_basic@nonblocking-crc-pipe-b/c fails on CI. 

https://intel-gfx-ci.01.org/CI/CI_DRM_2275/fi-skl-6770hq/igt@kms_pipe_crc_basic@nonblocking-crc-pipe-b.html

Dmesg: https://intel-gfx-ci.01.org/CI/CI_DRM_2275/fi-skl-6770hq/dmesg-during.log

https://intel-gfx-ci.01.org/CI/CI_DRM_2291/fi-skl-6770hq/igt@kms_pipe_crc_basic@nonblocking-crc-pipe-c.html

Dmesg: https://intel-gfx-ci.01.org/CI/CI_DRM_2291/fi-skl-6770hq/dmesg-during.log

One dmesg:
Out	
IGT-Version: 1.17-gd91fec7 (x86_64) (Linux: 4.10.0-CI-CI_DRM_2275+ x86_64)
nonblocking-crc-pipe-B: Testing connector DP-2 using pipe B
nonblocking-crc-pipe-B: Testing connector DP-4 using pipe B
Stack trace:
  #0 [__igt_fail_assert+0x101]
  #1 [test_read_crc.constprop.3+0x524]
  #2 [__real_main202+0x28a]
  #3 [main+0x33]
  #4 [__libc_start_main+0xf0]
  #5 [_start+0x29]
  #6 [<unknown>+0x29]
Subtest nonblocking-crc-pipe-B: FAIL (1.198s)
Err	
(kms_pipe_crc_basic:8857) CRITICAL: Test assertion failure function test_read_crc_for_output, file kms_pipe_crc_basic.c:143:
(kms_pipe_crc_basic:8857) CRITICAL: Failed assertion: n_crcs <= 3 + 1
(kms_pipe_crc_basic:8857) CRITICAL: Last errno: 11, Resource temporarily unavailable
(kms_pipe_crc_basic:8857) CRITICAL: error: 5 > 4
Subtest nonblocking-crc-pipe-B failed.
Comment 1 Jani Saarinen 2017-03-08 20:56:48 UTC
Similar issues like on https://bugs.freedesktop.org/show_bug.cgi?id=99788
Comment 2 Tomeu Vizoso 2017-03-13 15:11:01 UTC
(In reply to Jani Saarinen from comment #1)
> Similar issues like on https://bugs.freedesktop.org/show_bug.cgi?id=99788

Have had no luck so far reproducing this one here, probably because none of the recent DUTs that I have has a full-grown DP connector. Will get a miniDP->DP connector and try on my KBL.
Comment 3 Chris Wilson 2017-03-13 21:35:24 UTC
commit 2c64f11f38f44d21419dc15adc7162bd83f65664
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Mar 13 15:58:26 2017 +0000

    igt/kms_pipe_crc_basic: Tighten timings for CRC readback
    
    The number of vblanks that pass whilst we read back the CRCs is depended
    upon CPU scheduling -- we may take longer than expected and end up
    reading more CRCs. Align the start of the loop to a vblank.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=100132
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.