tests/kms_pipe_crc_basic.c
@@ -96,7 +96,6 @@ test_read_crc_for_output(data_t *data, int pipe, igt_output_t *output,
 	igt_display_t *display = &data->display;
 	igt_plane_t *primary;
 	drmModeModeInfo *mode;
-	igt_pipe_crc_t *pipe_crc;
 	igt_crc_t *crcs = NULL;
 	int c, j;
 
@@ -124,30 +123,35 @@ test_read_crc_for_output(data_t *data, int pipe, igt_output_t *output,
 
 		igt_display_commit(display);
 
-		if (flags & TEST_NONBLOCK)
-			pipe_crc = igt_pipe_crc_new_nonblock(pipe, INTEL_PIPE_CRC_SOURCE_AUTO);
-		else
-			pipe_crc = igt_pipe_crc_new(pipe, INTEL_PIPE_CRC_SOURCE_AUTO);
-
-		igt_pipe_crc_start(pipe_crc);
-
 		/* wait for N_CRCS vblanks and the corresponding N_CRCS CRCs */
 		if (flags & TEST_NONBLOCK) {
-			int i;
+			igt_pipe_crc_t *pipe_crc;
 
-			for (i = 0; i < N_CRCS; i++)
-				igt_wait_for_vblank(data->drm_fd, pipe);
+			pipe_crc = igt_pipe_crc_new_nonblock(pipe, INTEL_PIPE_CRC_SOURCE_AUTO);
+			igt_wait_for_vblank(data->drm_fd, pipe);
+			igt_pipe_crc_start(pipe_crc);
 
-			n_crcs = igt_pipe_crc_get_crcs(pipe_crc, N_CRCS * 3, &crcs);
+			igt_wait_for_vblank_count(data->drm_fd, pipe, N_CRCS);
+			n_crcs = igt_pipe_crc_get_crcs(pipe_crc, N_CRCS+1, &crcs);
+			igt_pipe_crc_stop(pipe_crc);
+			igt_pipe_crc_free(pipe_crc);
+
 			/* allow a one frame difference */
-			igt_assert_lte(n_crcs, N_CRCS + 1);
-			igt_assert_lte(N_CRCS, n_crcs + 1);
+			igt_assert_lte(N_CRCS, n_crcs);
 		} else {
+			igt_pipe_crc_t *pipe_crc;
+
+			pipe_crc = igt_pipe_crc_new(pipe, INTEL_PIPE_CRC_SOURCE_AUTO);
+			igt_pipe_crc_start(pipe_crc);
+
 			n_crcs = igt_pipe_crc_get_crcs(pipe_crc, N_CRCS, &crcs);
+
+			igt_pipe_crc_stop(pipe_crc);
+			igt_pipe_crc_free(pipe_crc);
+
 			igt_assert_eq(n_crcs, N_CRCS);
 		}
 
-		igt_pipe_crc_stop(pipe_crc);
 
 		/*
 		 * save the CRC in colors so it can be compared to the CRC of
@@ -168,7 +172,6 @@ test_read_crc_for_output(data_t *data, int pipe, igt_output_t *output,
 				igt_assert_eq(crcs[j].frame + 1, crcs[j + 1].frame);
 
 		free(crcs);
-		igt_pipe_crc_free(pipe_crc);
 		igt_remove_fb(data->drm_fd, &data->fb);
 		igt_plane_set_fb(primary, NULL);
 
